[package]
name = "rover"
version = "0.1.0"
authors = ["hexilee <i@hexilee.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

iced = "0.3"
rusty_v8 = "0.23"
webrender = { git = "https://github.com/servo/webrender" }
